--- a/src/components/Dashboard/Sidebar.css
+++ b/src/components/Dashboard/Sidebar.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-image: url('../../photos/cov8.png');
+  background-image: url('../../photos/cov.png');
   background-size: cover;
   background-position: center;
   color: white;
